fix issue Stroker order has wrong color and text shadow #122

--- a/WKElementaryDark.css
+++ b/WKElementaryDark.css
@@ -1456,6 +1456,12 @@
   .character-header--radical .character-header__meaning {
     text-shadow: none;
   }
+
+  .item-info-injector-accordion > button {
+    color: var(--ED-text);
+    text-shadow: none;
+  }
+
   /*************************************************************************************************/
   /* Levels page
   /*************************************************************************************************/
